Fixed issue with flex wrapping

--- a/themes/kmom03/css/style.css
+++ b/themes/kmom03/css/style.css
@@ -468,7 +468,6 @@ pre code {
 .technology-article {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
 }
 
 .technology-article .sidebar {
@@ -497,9 +496,15 @@ pre code {
   right: 2rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .technology-article .sidebar {
     display: none;
+  }
+
+  .technology-container {
+    display: grid;
+    grid-column: span 1;
+    padding-bottom: 2rem;
   }
 
   .technology-container h1,
